--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,26 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+.cover {
+  height: 20vmin;
+  position: fixed;
+  left: 39%;
+  width: 11%;
+  height: auto;
+  pointer-events: none;
+  float:left;
+}
+.wheel {
+  margin-top: 14px;
+  margin-right: 30px;
+  height: 20vmin;
+  position: relative;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .cover {
+    animation: cover-spin infinite 20s linear;
   }
 }
 
@@ -28,7 +40,26 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+.Form-login {
+  background-color: rgba(229, 255, 0, 0.11);
+  border-radius: 20px;
+  margin: 10px;
+}
+
+.Form-login-entry{
+  margin-left:10px;
+  margin-right: 10px;
+}
+
+.form-label{
+  margin-right:10px
+}
+
+.Login-Btn{
+  Margin: 10px;
+}
+
+@keyframes cover-spin {
   from {
     transform: rotate(0deg);
   }
