--- a/src/App.css
+++ b/src/App.css
@@ -1,61 +1,46 @@
 body {
   text-align: center;
   background-color: #001401;
-  
+  margin-left: auto;
+  margin-right: auto;
   font-size: calc(12px + 2vmin);
   color: white;
 }
-
-.login-page {
+td{
+  padding-left: 5px;
+}
+footer {
+  position:absolute;
+  bottom: 50px;
+  left: 40%;
+  right: 40%;
+}
+.home-page {
+  background: linear-gradient(#93cf89,#004904cc, #001401);
+  margin-left: 0%;
+  margin-right: 0%;
+}
+.home-page-header{
   display: flex;
   flex-direction: column;
   flex: auto;
   align-items: center;
   justify-content: center;
 }
-
-
-@media (prefers-reduced-motion: no-preference) {
-  .cover {
-    animation: cover-spin infinite 20s linear;
-  }
+.home-page-left {
+  float: left;
+  margin-left:20%;
+}
+.home-page-right {
+  float: right;
+  margin-right:20%;
 }
 
-.App-link {
+
+.link {
   color: rgb(255, 208, 0);
 }
 
-.Form-login {
-  background-color: rgba(229, 255, 0, 0.11);
-  border-radius: 20px;
-  margin: 10px;
-}
-
-.Form-login-entry{
-  margin-left:10px;
-  margin-right: 10px;
-}
-
-.form-label{
-  margin-right:10px
-}
-
-.Login-Btn{
-  Margin: 10px;
-}
-
-@keyframes cover-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-td{
-  padding-left: 5px;
-}
 
 
 .userDisplay {
@@ -69,4 +54,27 @@ td{
   position: relative;
   border: 6px solid rgb(0, 255, 136);
   padding: 32px;
+}
+
+.status-icon {
+  font-size: 50px;
+}
+
+#header-grad {
+  background: linear-gradient(#93cf89,#004904cc, #001401);
+}
+
+
+@media (prefers-reduced-motion: no-preference) {
+  .cover {
+    animation: cover-spin infinite 20s linear;
+  }
+}
+@keyframes cover-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
